--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 }, 1000)
             });
         }
-        // simple commiting
+        // simple commits for class
+        // 
     </script>
 </body>
 </html>
